--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "3.5"
 install:
   - "pip install ."
+cache:
+  pip: true
 before_script:
   - "pip install git+https://github.com/Rostlab/nalaf.git@feature/Experimental"
   - "python -m nalaf.download_corpora"
