test the running of the simple evaluation

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
 
 script:
   - nosetests --with-coverage
+  - time python simple_evaluation.py --corpus relna
 
 after_success:
   - codecov
