--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ branches:
 
 cache:
   pip: true
+  directories:
+    - $HOME/nltk_data
 
 before_install:
   - pip install git+https://github.com/Rostlab/nalaf.git@feature/Experimental
