--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ cache:
 before_install:
   - pip install git+https://github.com/Rostlab/nalaf.git@feature/Experimental
   - python -m nalaf.download_corpora
-  - pip install codecov
+  - pip install codecov pytest-cov
   - (test -d $SVM_LIGHT && [ "$(ls -A $SVM_LIGHT)" ] && echo "Use cached non-empty svm_light") || (wget http://download.joachims.org/svm_light/current/svm_light.tar.gz -O /tmp/svm_light.tar.gz && mkdir -p $SVM_LIGHT && cd $SVM_LIGHT && tar -xvf /tmp/svm_light.tar.gz && make)
   - svm_classify # Effectively test that svm_light was installed and is in the PATH. It should print version -> SVM-light V6.02 (14.08.08)
   - cd $TRAVIS_BUILD_DIR
@@ -32,8 +32,7 @@ install:
   - python3 -m relna.download_corpora
 
 script:
-  - nosetests --with-coverage
-  - time python simple_evaluation.py --corpus relna
+  - time py.test -v --cov=./
 
 after_success:
   - codecov
