--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,6 @@ cache:
 
 before_install:
   - pip install git+https://github.com/Rostlab/nalaf.git@feature/Experimental
-  - git rev-parse HEAD  # Log the exact commit from nalaf for debugging purposes
   - python -m nalaf.download_corpora
   - pip install codecov pytest-cov
   - (test -d $SVM_LIGHT && [ "$(ls -A $SVM_LIGHT)" ] && echo "Use cached non-empty svm_light") || (wget http://download.joachims.org/svm_light/current/svm_light.tar.gz -O /tmp/svm_light.tar.gz && mkdir -p $SVM_LIGHT && cd $SVM_LIGHT && tar -xvf /tmp/svm_light.tar.gz && make)
@@ -29,6 +28,7 @@ before_install:
   - cd $TRAVIS_BUILD_DIR
 
 install:
+  - printf 'relna commit: ' && git rev-parse HEAD  # **relna**: log the exact commit for debugging purposes
   - pip install .
   - python -m relna.download_corpora
 
